# uflow

./: .gitignore  CLAUDE.md  pyflow-mdi.py  pyflow.py  pyflow_run.py  pyproject.toml
docs/: uFlow命令行执行.md
notes/: PyFlowPackageDevelopmentGuide.md  class_vs_functional_nodes.md  component_development_guide.md  error_handling_guide.md  execution_ports_summary.md  node_category_hierarchy.md  node_components_summary.md
src/uflow/: App.py  AppMDI.py  ConfigManager.py  Input.py  __init__.py  graphUiParser.py
src/uflow/AI/: config.py  openai_client.py  service.py
src/uflow/Configs/: prefs.ini
src/uflow/Core/: Common.py  EvaluationEngine.py  FunctionLibrary.py  GraphBase.py  GraphManager.py  Interfaces.py  NodeBase.py  PackageBase.py  PathsRegistry.py  PinBase.py  PyCodeCompiler.py  Variable.py  __init__.py  structs.py  version.py
src/uflow/Scripts/: __init__.py
src/uflow/Tests/: Test_Arrays.py  Test_BasePackage.py  Test_General.py  TestsBase.py  __init__.py
src/uflow/UI/: CompileUiQt.py  ContextMenuDataBuilder.py  ContextMenuGenerator.py  EditorHistory.py  EncodeResources.py  Resources.qrc  UIInterfaces.py  __init__.py
src/uflow/UI/Canvas/: AutoPanController.py  CanvasBase.py  IConvexHullBackDrop.py  NodeActionButton.py  Painters.py  SelectionRect.py  UICommon.py  UIConnection.py  UINodeBase.py  UIPinBase.py  UIVariable.py  WatchPinValueItem.py  loopBackDrop.py
src/uflow/UI/Themes/: Dark.json  DarkGreen.json  White.json
src/uflow/UI/Tool/: Tool.py
src/uflow/UI/Utils/: ConvexHull.py  PythonSyntax.py  stylesheet.py
src/uflow/UI/Views/: NodeBox.py  PinWidget_ui.py  VariableForm_ui.py  VariablesWidget.py  VariablesWidget_ui.py
src/uflow/Wizards/: ClassDialogueBase.py  PackageBuilder.py  PackageWizard.py  PkgGen.py  WizardDialogueBase.py
(+29 files in other folders)
